@@ -1,3 +1,8 @@
+2004-05-20  lav
+
+	* undo.cc: fixed malloc(0) and memory allocation error handling;
+	  clear group_head in Clear.
+
 2004-05-19  lav
 
 	* undo.h, undo.cc: (GroupHead) new class; save block positions there.
